--- a/Project3/index.html
+++ b/Project3/index.html
@@ -10,8 +10,8 @@
   <body>
     <section class="hero_section">
       <div class="text_container">
-        <h2><span class="lg_text">Hi,</span> I am John Doe</h2>
-        <h1 class="lg_text">FULL STACK DEVELOPER</h1>
+        <h2><span class="lg_text">Hi,</span> I am Shubham Salunke</h2>
+        <h1 class="lg_text">FRONT END DEVELOPER</h1>
       </div>
     </section>
     <section class="black_box">
@@ -26,8 +26,7 @@
           <div class="card_content">
             <h3>Web Development</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
-              quibusdam ex quaerat quasi nostrum tempore.
+              Web development is the process of creating and maintaining websites and web applications. It involves front-end development, which focuses on the visual and interactive aspects using HTML, CSS, and JavaScript. 
             </p>
           </div>
         </div>
@@ -40,8 +39,7 @@
           <div class="card_content">
             <h3>App Development</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
-              quibusdam ex quaerat quasi nostrum tempore.
+              "App development" refers to the process of designing, coding, testing, and launching software applications for platforms like mobile devices, web browsers, or desktop systems, essentially creating functional apps that users can interact with on various devices.
             </p>
           </div>
         </div>
@@ -54,8 +52,7 @@
           <div class="card_content">
             <h3>UI UX Design</h3>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ratione
-              quibusdam ex quaerat quasi nostrum tempore.
+              UI/UX design is the process of creating a product or service that is easy to use, visually appealing, and enjoyable for the user. UI stands for user interface, and UX stands for user experience. 
             </p>
           </div>
         </div>
@@ -64,11 +61,9 @@
     <section class="bottom_section">
       <div class="contact">
         <h2>Contact Me</h2>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nisi dolor,
-          esse quasi doloremque temporibus quis.
-        </p>
-        <p>dosomecoding@example.test</p>
+        <p>Shubham Salunke</p>
+        <p>shubhamsalunke460@gmail.com</p>
+        <p>Phone no:-9854623157</p>
       </div>
       <div class="about">
         <h2>About Me</h2>
