--- a/Project5/index.html
+++ b/Project5/index.html
@@ -18,7 +18,7 @@
     <div class="main">
         <div class="nav">
             <div class="nav-part-1">
-                <img src="images/nike-logo-0.png" alt="logo">
+                <img src="images/Nike logo.png" alt="logo">
                 <ul>
                     <li>Home</li>
                     <li>Men</li>
